--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,12 @@
 body {
     background-color: #001a33;
 }
+
+.flightData {
+    margin-top: 40vh;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+    height: 500px;
+    background-color: #4361ee;
+}
