--- a/src/loading.css
+++ b/src/loading.css
@@ -12,8 +12,8 @@ body{
 .body {
     display: grid;
     place-items: center;
-    padding-top: 60vh;
-    min-height: 40vh;
+    padding-top: 50vh;
+    min-height: 50vh;
     min-width: auto;
 }
 
@@ -51,9 +51,8 @@ body{
 }
 
 .loader {
-    --depth: var(--size);
     --color: var(--color-one, #8338EC);
-    width: calc(var(--depth) * var(--coefficient));
+    width: calc(var(--size) * var(--coefficient));
     aspect-ratio: 1;
     transform-origin: 50% 50%;
     animation: squish-squosh var(--timeline) infinite;
@@ -70,27 +69,27 @@ body{
 @keyframes squish-squosh {
 
     0%,50%,60% {
-        scale: 1 1 1;
+        scale: 1 1;
     }
 
     10%,35% {
-        scale: 1.2 0.8 1.2;
+        scale: 1.2 0.8;
     }
 
     25% {
-        scale: 0.8 1.2 0.8;
+        scale: 0.8 1.2;
     }
 
     70% {
-        scale: 1 1 2;
+        scale: 1 1;
     }
 
     80% {
-        scale: 2 1 2;
+        scale: 2 1;
     }
 
     90%,100% {
-        scale: 8 5 5;
+        scale: 8 5;
     }
 }
 
@@ -152,7 +151,7 @@ body{
 
 .cuboid__side:nth-of-type(1) {
     --b: 1.1;
-    height: calc(var(--depth, 20) * var(--coefficient));
+    height: calc(var(--size, 20) * var(--coefficient));
     width: 100%;
     top: 0;
     transform: translate(0, -50%) rotateX(90deg);
@@ -162,7 +161,7 @@ body{
     --b: 0.9;
     --color: var(--color-three, #FF006E);
     height: 100%;
-    width: calc(var(--depth, 20) * var(--coefficient));
+    width: calc(var(--size, 20) * var(--coefficient));
     top: 50%;
     right: 0;
     transform: translate(50%, -50%) rotateY(90deg);
@@ -171,7 +170,7 @@ body{
 .cuboid__side:nth-of-type(3) {
     --b: 1;
     width: 100%;
-    height: calc(var(--depth, 20) * var(--coefficient));
+    height: calc(var(--size, 20) * var(--coefficient));
     bottom: 0;
     transform: translate(0%, 50%) rotateX(90deg);
 }
@@ -180,7 +179,7 @@ body{
     --b: 1;
     --color: var(--color-three, #FF006E);
     height: 100%;
-    width: calc(var(--depth, 20) * var(--coefficient));
+    width: calc(var(--size, 20) * var(--coefficient));
     left: 0;
     top: 50%;
     transform: translate(-50%, -50%) rotateY(90deg);
@@ -191,7 +190,7 @@ body{
     --color: var(--color-two, #3A86EF);
     height: 100%;
     width: 100%;
-    transform: translate3d(0, 0, calc(var(--depth, 20) * (var(--coefficient) * 0.5)));
+    transform: translate3d(0, 0, calc(var(--size, 20) * (var(--coefficient) * 0.5)));
     top: 0;
     left: 0;
 }
@@ -200,7 +199,7 @@ body{
     --b: 1.2;
     height: 100%;
     width: 100%;
-    transform: translate3d(0, 0, calc(var(--depth, 20) * (var(--coefficient) * -0.5))) rotateY(180deg);
+    transform: translate3d(0, 0, calc(var(--size, 20) * (var(--coefficient) * -0.5))) rotateY(180deg);
     top: 0;
     left: 0;
 }
