--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,15 @@
 body {
-    background-color: #001a33;
+    background-color: #094e8f !important;
 }
+
+.flightForm {
+    padding-top: 5vh;
+    display: grid;
+    place-items: center;
+    width: auto;
+}
+
+
 
 .dataBlock{
     display: grid;
