--- a/src/main.css
+++ b/src/main.css
@@ -218,7 +218,15 @@ th {
 }
 
 .footer {
+    background-color: rgb(53, 38, 187);
     border-top: 1px solid black;
     height: 7%;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 10px;
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
