--- a/src/main.css
+++ b/src/main.css
@@ -40,6 +40,9 @@ select {
     padding: 10px 20px;
     transition: 0.2s ease-in;
     cursor: pointer;
+    color: white;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
 
 .btn:hover {
