--- a/src/main.css
+++ b/src/main.css
@@ -80,7 +80,7 @@ select {
     height: 66vh;
     margin-left: -9px;
     margin-top: 20px;
-    background-image: url("./images/plane_bg.jpg");
+    background-image: url("/images/plane_bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
